src-tauri/!
error[E0432]: unresolved import `tauri`
 --> src/storage_permission.rs:2:5
  |
2 | use tauri::AppHandle;
  |     ^^^^^ use of unresolved module or unlinked crate `tauri`
  |
  = help: you might be missing a crate named `tauri`

error[E0432]: unresolved import `tracing`
 --> src/storage_permission.rs:3:5
  |
3 | use tracing::{info, warn};
  |     ^^^^^^^ use of unresolved module or unlinked crate `tracing`
  |
  = help: you might be missing a crate named `tracing`

error[E0432]: unresolved import `crate::config`
 --> src/storage_permission.rs:5:12
  |
5 | use crate::config::AppConfig;
  |            ^^^^^^ could not find `config` in the crate root

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `tauri`
   --> src/storage_permission.rs:244:3
    |
244 | #[tauri::command]
    |   ^^^^^ use of unresolved module or unlinked crate `tauri`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `tauri`
   --> src/storage_permission.rs:154:3
    |
154 | #[tauri::command]
    |   ^^^^^ use of unresolved module or unlinked crate `tauri`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `tauri`
   --> src/storage_permission.rs:101:3
    |
101 | #[tauri::command]
    |   ^^^^^ use of unresolved module or unlinked crate `tauri`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `tauri`
  --> src/storage_permission.rs:53:3
   |
53 | #[tauri::command]
   |   ^^^^^ use of unresolved module or unlinked crate `tauri`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `tauri`
  --> src/storage_permission.rs:27:3
   |
27 | #[tauri::command]
   |   ^^^^^ use of unresolved module or unlinked crate `tauri`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `serde`
  --> src/storage_permission.rs:17:24
   |
17 | #[derive(Debug, Clone, serde::Serialize)]
   |                        ^^^^^ use of unresolved module or unlinked crate `serde`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `serde`
 --> src/storage_permission.rs:8:24
  |
8 | #[derive(Debug, Clone, serde::Serialize)]
  |                        ^^^^^ use of unresolved module or unlinked crate `serde`

error[E0282]: type annotations needed
   --> src/storage_permission.rs:129:22
    |
129 |                 uri: uri.clone(),
    |                      ^^^ cannot infer type

error[E0282]: type annotations needed
   --> src/storage_permission.rs:181:22
    |
181 |                 uri: uri.clone(),
    |                      ^^^ cannot infer type

error: aborting due to 12 previous errors

Some errors have detailed explanations: E0282, E0432, E0433.
For more information about an error, try `rustc --explain E0282`.
